# astro_bevy

./: CREDITS.md  Cargo.toml
assets/: ldtk.ldtk  world.ldtk
assets_raw/: bullet.xcf  cursor.xcf  enemy.xcf  enemy2.xcf  gun1.xcf  player.xcf  player2.xcf  player_sheet.xcf  wall.xcf
src/: bg.rs  bullet.rs  camera.rs  config.rs  enemy.rs  entity.rs  input_manager.rs  level_manager.rs  main.rs  player.rs  wall.rs
src/entity/: bullet.rs  enemy.rs  player.rs
src/player/: gun.rs
