[package]
name = "astro_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.8.1"
bevy_ecs_ldtk = "0.4.0"
rand = "0.8.5"
# benimator = "4.0.0"

[dependencies.bevy_rapier2d]
version = "0.16.2"
# features = ["debug-render"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
debug = []
